--- a/src/app/main-content/main-content.component.scss
+++ b/src/app/main-content/main-content.component.scss
@@ -45,5 +45,5 @@ router-outlet {
 
 @media (max-width: 988px) {
     app-reviews {height: auto;}
-    app-contact {height: auto;}
+    app-contact {height: auto; width: 100%;}
 }
