--- a/src/app/main-content/contact/formular/formular.component.scss
+++ b/src/app/main-content/contact/formular/formular.component.scss
@@ -149,7 +149,7 @@ label {
 @media (max-width: 788px) {
     form {height: 100%;}
     input[type=text] {padding: 8px;}
-    .formular {gap: 16px;}
+    .formular {gap: 16px; height: auto;}
     textarea {padding: 8px;}
 }
 
