--- a/src/app/main-content/about-me/about-me.component.scss
+++ b/src/app/main-content/about-me/about-me.component.scss
@@ -38,6 +38,7 @@ app-common-navbar {
 .right_side {
     display: flex;
     flex-direction: column;
+    align-items: flex-end;
 }
 
 h2 {
@@ -51,10 +52,10 @@ h2 {
 
 .text_over {
     position: absolute;
-    left: 36vw;
+    left: 79%;
     top: 42vh;
     width: 40vw;
-    max-width: 600px;
+    max-width: 547px;
     background-color: #1D1D1D;
     border-radius: 4px;
     padding: 32px;
@@ -77,7 +78,7 @@ h2 {
 .btn {margin-bottom: 0;}
 
 .info_slide_up {
-    position: relative;
+    position: absolute;
     border-radius: 4px;
     border: 1px solid black;
     padding: 32px;
@@ -88,16 +89,22 @@ h2 {
     background-color: #679aac;
     color: #f8f7e5;
     font-family: 'Quicksand';
-    justify-self: center;
-    align-self: center;
     z-index: 100;
     >div {
         display: flex;
         align-items: center;
         gap: 8px;
         font-size: 16px;
-        font-weight: 400px;
+        font-weight: 400;
     }
+}
+
+.show_info_slider {
+    animation: lets_slide 0.4s ease-out forwards;
+    z-index: 300;
+    position: absolute;
+    // display: flex;
+    // align-self: flex-end;
 }
 
 .x_icon {
@@ -105,17 +112,8 @@ h2 {
 }
 
 @keyframes lets_slide {
-    from { transform: translateY(0); } /* Startposition rechts außen */
-    to { transform: translateY(-200px); } /* Endposition sichtbar (rechts) */
-}
-
-.show_info_slider {
-    animation: lets_slide 0.4s ease-out forwards;
-    z-index: 300;
-    position: absolute;
-    bottom: 0;
-    bottom: -139px;
-    right: 25%;
+    from { transform: translateY(100%); } 
+    to { transform: translateY(20%); } 
 }
 
 h5 {
@@ -144,11 +142,9 @@ app-navdots {
 
   .mobile_view_text {display: none;}
 
-//************max-width*******************************************************
-@media(max-width: 1290px) {
+// ************max-width*******************************************************
+@media (max-width: 1290px) {
     .left_side >img {margin-left: 0;}
-    .text_over {left: 36vw; width: 46vw;}
-    .show_info_slider {right: 23%;}
 }
 
 @media (max-width: 1200px) {
@@ -158,17 +154,15 @@ app-navdots {
         height: unset;
         padding-top: 0;
     }
-    .text_over {left: 30vw; width: 53vw;}
 }
 
-@media (max-width: 1183px) {
-    .show_info_slider {bottom: -164px;}
+@media (max-width: 1189px) {
+    .text_over {top: 39vh; width: 50vw;}
 }
 
 @media (max-width: 1048px) {
     .left_side >img {width: 347px;}
-    .show_info_slider {right: 29%;}
-    .text_over {left: 27vw;}
+    .text_over {left: 27vw; top: 36vh;}
 }
 
 @media (max-width: 994px) {
@@ -182,6 +176,7 @@ app-navdots {
 
 @media (max-width: 900px) {
     app-navdots {display: none;}
+    .scroll_bar {display: none;}
     .x_icon {display: block;}
 }
 
@@ -200,8 +195,9 @@ app-navdots {
     .text_over {top: 38vh;}
 }
 
-@media (max-width: 759) {
+@media (max-width: 760px) {
     h2 {padding-left: 7vw;}
+    .text_over {width: 55vw;}
 }
 
 @media (max-width: 744) {
@@ -231,7 +227,7 @@ app-navdots {
     .content{padding-top: 32px;}
 }
 
-@media (max-width: 570px) {
+@media (max-width: 575px) {
     .left_side >img {
         width: 240px; 
         align-self: flex-start; 
@@ -247,9 +243,10 @@ app-navdots {
 }
 
 @media (max-width: 480px) {
-    h2 {position: absolute;
-        right: -24vw;}
     .left_side >img {width: 200px;}
+    .content {flex-direction: column; justify-content: initial;}
+    .left_side {order: 1;}
+    .right_side {height: auto;}
 }
 
 @media (max-width: 430px) {
@@ -261,14 +258,11 @@ app-navdots {
 
 @media (max-width: 399px) {
     .left_side >img {width: 172px;}
-    .text_over {top: 29vh;}
-    h2 {right: -19vw;}
 }
 
 @media(max-width: 380px) {
     .mobile_view_text {display: block;}
     .normal_view_text {display: none;}
-    .show_info_slider {right: 24%; bottom: -111px;}
 }
 
 @media(max-width: 370px) {
@@ -277,29 +271,14 @@ app-navdots {
 
 @media (max-width: 360px) {
     .btn {padding: 8px 16px; width: 124px;}
-    .show_info_slider {        
-        right: 21%;
-        width: 75vw;
-    }
 }
 
 @media (max-width: 348px) {
     .text_over {top: 40vh;}
     .left_side >img {width: 240px;}
-    h2 {right: -3vw;}
 }
 
-//*****Nesthub**************************************
+// //*****Nesthub**************************************
 @media screen and (width: 1024px) and (height: 600px) {
-    .text_over {top: 22vh;}
-}
-
-//*****surface Pro 7**************************************
-@media screen and (width: 912px) and (height: 1368px) {
-    .show_ingo_slider {bottom: -94px;}
-}
-
-//*****iPhoneSE**************************************
-@media screen and (width: 375px) and (height: 667px) {
-    .show_info_slider {right: 26%;}
+    .text_over {top: 23vh;}
 }
