--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -1,13 +1,19 @@
 <div class="portfolio_footer fontQuicksand">
-        <div class="animated_wheels oneThird">
-            
-        </div>
-        <div class="name_copyright oneThird">
-            © Barbora Lambeinova 2025
-        </div>
-        <div class="links oneThird">
-            <a routerLink="/impressum">{{ 'footer.imprint' | translate }}</a>
-            <a href="https://www.linkedin.com/in/barbora-lambeinova-33706a35a/" target="_blank">LinkedIn</a>
-            <a href="https://github.com/BaraDroid" target="_blank">Git Hub</a>
-        </div>
+    <div class="gearwheels">
+        <img class="blue_sun rotate_anticlockwise" src="./assets/animation_wheels/animation_wheel_blue.svg"
+            alt="blue rotating wheel">
+        <img class="orange_sun rotating" src="./assets/animation_wheels/animation_wheel_orange.svg"
+            alt="orange rotating wheel">
+    </div>
+<div class="portfolio_text">
+    <div class="name_copyright oneThird">
+        © Barbora Lambeinova 2025
+   </div>
+   <div class="links oneThird">
+       <a routerLink="/impressum">{{ 'footer.imprint' | translate }}</a>
+       <a href="https://www.linkedin.com/in/barbora-lambeinova-33706a35a/" target="_blank">LinkedIn</a>
+       <a href="https://github.com/BaraDroid" target="_blank">Git Hub</a>
+   </div>
+</div>
+
 </div>
