--- a/src/app/impressum/impressum.component.scss
+++ b/src/app/impressum/impressum.component.scss
@@ -27,6 +27,10 @@ a {
     font-weight: 700;
 }
 
-@media (max-width: 450px) {
-    .content {padding-left: 16px; padding-right: 16px; text-align: center;}
+@media (max-width: 1200px) {
+    .content {padding-left: 72px; padding-right: 72px;}
+}
+
+@media (max-width: 700px) {
+    .content {padding-left: 16px; padding-right: 16px; text-align: justify;}
 }
