--- a/src/app/main-content/above-the-folder/above-the-folder.component.scss
+++ b/src/app/main-content/above-the-folder/above-the-folder.component.scss
@@ -29,21 +29,18 @@ app-navdots {
     max-width: 1440px;
     padding-left: 72px;
     padding-right: 72px;
-    height: calc(100vh - 88px);
+    height: calc(100dvh - 88px);
     display: flex;
-    flex-direction: row;
     justify-content: center;
 }
 
 .atf_left {
-    width: 456px;
-    height: 304px;
     margin-left: 40px;
     margin-top: 72px;
     display: flex;
     flex-direction: column;
     align-items: flex-start;
-    gap:16px;
+    gap: 16px;
     >.text {
         color: #F8F7E5;
         >span {
@@ -62,12 +59,6 @@ app-navdots {
     }
 }
 
-.scroll_element {
-    display: flex;
-    align-items: center;
-    justify-items: center;
-}
-
 .arrow {
     position: absolute;
     z-index: 2;
@@ -77,17 +68,15 @@ app-navdots {
 }
 
 .atf_right {
-    //height: 100vh;
-    width: 740px;
     display: flex;
     justify-content: flex-end;
+    width: 50%;
 }
 
 .sun {
-    position: relative;
     height: 327px;
-    align-self: center;
-    bottom: 133px;
+    justify-self: flex-start;
+    top: 100px;
 }
 .my_foto {
     position: absolute;
@@ -100,7 +89,6 @@ app-navdots {
 }
 
 .rotating {margin-top: 50px;}
-
 
 @media(max-width: 1213px) {
     .atf_left {margin-left: 0;}
@@ -120,8 +108,8 @@ app-navdots {
     .atf_left{>img{margin-top: 56px;}}
     .my_foto {height: 92%;}
     .sun {height: 299px;
-        bottom: 70px;
-        left: 20px;}
+        justify-self: flex-start;
+        top: 125px;}
 }
 
 @media (max-width: 965px) {
