--- a/src/app/shared/main-navbar/main-navbar.component.html
+++ b/src/app/shared/main-navbar/main-navbar.component.html
@@ -44,11 +44,11 @@
         </div>
 
         <div class="links_list">
-            <a (mouseenter)="showWheelAbout = true" (mouseleave)="showWheelAbout = false" href="#about" (click)="closeMenuTab()"><img  *ngIf="showWheelAbout" src="./assets/animation_wheels/orange_sun.svg" alt="orange_wheel">About me</a>
-            <a (mouseenter)="showWheelSkills = true" (mouseleave)="showWheelSkills = false" href="#competences" (click)="closeMenuTab()">@if(showWheelSkills){<img src="./assets/animation_wheels/orange_sun.svg" alt="orange_wheel">}Skills</a>
-            <a (mouseenter)="showWheelPortfolio = true" (mouseleave)="showWheelPortfolio = false" href="#work" (click)="closeMenuTab()">@if(showWheelPortfolio){<img src="./assets/animation_wheels/orange_sun.svg" alt="orange_wheel">}Portfolio</a>
-            <a (mouseenter)="showWheelRef = true" (mouseleave)="showWheelRef = false" href="#references" (click)="closeMenuTab()">@if(showWheelRef){<img src="./assets/animation_wheels/orange_sun.svg" alt="orange_wheel">}References</a>
-            <a (mouseenter)="showWheelContact = true" (mouseleave)="showWheelContact = false" href="#contact" (click)="closeMenuTab()">@if(showWheelContact){<img src="./assets/animation_wheels/orange_sun.svg" alt="orange_wheel">}Contact me</a>
+            <a (mouseenter)="showWheelAbout = true" (mouseleave)="showWheelAbout = false" href="#about" (click)="closeMenuTab()"><img  *ngIf="showWheelAbout" src="./assets/animation_wheels/orange_sun.svg" alt="orange_wheel">{{ 'navbar_menu.01' | translate }}</a>
+            <a (mouseenter)="showWheelSkills = true" (mouseleave)="showWheelSkills = false" href="#competences" (click)="closeMenuTab()">@if(showWheelSkills){<img src="./assets/animation_wheels/orange_sun.svg" alt="orange_wheel">}{{ 'navbar_menu.02' | translate }}</a>
+            <a (mouseenter)="showWheelPortfolio = true" (mouseleave)="showWheelPortfolio = false" href="#work" (click)="closeMenuTab()">@if(showWheelPortfolio){<img src="./assets/animation_wheels/orange_sun.svg" alt="orange_wheel">}{{ 'navbar_menu.03' | translate }}</a>
+            <a (mouseenter)="showWheelRef = true" (mouseleave)="showWheelRef = false" href="#references" (click)="closeMenuTab()">@if(showWheelRef){<img src="./assets/animation_wheels/orange_sun.svg" alt="orange_wheel">}{{ 'navbar_menu.04' | translate }}</a>
+            <a (mouseenter)="showWheelContact = true" (mouseleave)="showWheelContact = false" href="#contact" (click)="closeMenuTab()">@if(showWheelContact){<img src="./assets/animation_wheels/orange_sun.svg" alt="orange_wheel">}{{ 'navbar_menu.05' | translate }}</a>
         </div>
 		<div class="icons_list">
 			<a href="https://github.com/BaraDroid" target="_blank" (click)="closeMenuTab()"><svg width="32" height="32" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg">
